# epic-harness

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  install.sh  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml.disabled
agents/: auditor.md  planner.md
commands/: check.md  evolve.md  go.md  ship.md  spec.md  team.md
docs/de/: README.md
docs/es/: README.md
docs/fr/: README.md
docs/hi/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/pt-BR/: README.md
docs/zh-CN/: README.md
docs/zh-TW/: README.md
hooks/: hooks.json  setup.sh
hooks/scripts/: common.js  guard.js  mem-mcp.cjs  mem-mcp.test.cjs  mem-server.cjs  mem-server.test.cjs  observe.js  polish.js  reflect.js  resume.js  snapshot.js
integrations/: mcp-registration.md
integrations/aider/: .aider.conf.yml
integrations/aider/.aider/: CONVENTIONS.md
integrations/antigravity/: AGENTS.md  install.md
integrations/antigravity/agents/: auditor.md  builder.md  planner.md  reviewer.md
integrations/antigravity/skills/: document.md  perf.md  secure.md  simplify.md  tdd.md  verify.md
integrations/antigravity/tests/: validate.sh
integrations/antigravity/workflows/: check.md  evolve.md  go.md  ship.md  spec.md  team.md
integrations/cline/hooks/: PostToolUse  PreToolUse  TaskCancel  TaskResume  TaskStart
integrations/cline/rules/: epic-harness.md
integrations/codex/: config.toml  hooks.json  install.md
integrations/codex/agents/: auditor.md  builder.md  planner.md
integrations/codex/commands/: check.md  evolve.md  spec.md
integrations/codex/prompts/: evolve.md  go.md  team.md
integrations/codex/skills/perf/: SKILL.md
integrations/codex/skills/tdd/: SKILL.md
integrations/codex/skills/verify/: SKILL.md
integrations/cursor/: hooks.json  install.md
integrations/cursor/agents/: auditor.md  builder.md  planner.md  reviewer.md
integrations/cursor/commands/: check.md  evolve.md  go.md  ship.md  spec.md  team.md
integrations/cursor/rules/: harness-context.mdc  harness-skills.mdc
integrations/gemini/: install.md  settings.json
integrations/gemini/agents/: auditor.md  builder.md  planner.md  reviewer.md
integrations/gemini/commands/: check.md  check.toml  evolve.md  evolve.toml  go.md  go.toml  ship.toml  spec.md  spec.toml  team.md  team.toml
integrations/gemini/skills/context/: SKILL.md
integrations/gemini/tests/: validate.sh
integrations/opencode/agents/: auditor.md  builder.md  planner.md  reviewer.md
integrations/opencode/commands/: check.md  evolve.md  go.md  ship.md  spec.md  team.md
integrations/opencode/plugins/: epic-harness.js
presets/go/: evo-go-care.md
presets/node/: evo-fix-build-fail.md  evo-ts-care.md
presets/python/: evo-py-care.md
presets/rust/: evo-rs-care.md
references/: performance.md  security.md  team-patterns.md  testing.md
skills/_dispatch/: SKILL.md
skills/context/: SKILL.md
skills/tdd/: SKILL.md
skills/verify/: SKILL.md
specs/: SPEC-20260412233043.md
src/: main.rs
src/hooks/: common.rs  guard.rs  install.rs  install_wizard.rs  mod.rs  observe.rs  polish.rs  reflect.rs  resume.rs  snapshot.rs
src/hooks/mem/: cli.rs  graph.rs  mcp.rs  mod.rs  server.rs  store.rs  webview.html
src/ts/: common.ts  guard.ts  observe.ts  polish.ts  reflect.ts  resume.ts  snapshot.ts
tests/: common.test.mjs  e2e.test.mjs  guard.test.mjs  mem_test.rs  reflect.test.mjs  snapshot.test.mjs  stagnation.test.mjs
(+5 files in other folders)
