[package]
name = "epic-harness"
version = "0.1.4"
edition = "2024"
description = "6 commands · auto skills · self-evolving Claude Code harness"
license = "Apache-2.0"
repository = "https://github.com/epicsagas/epic-harness"
homepage = "https://github.com/epicsagas/epic-harness"
readme = "README.md"
keywords = ["claude-code", "plugin", "agent", "harness", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["ref/", "tests/", ".harness/", "hooks/scripts/", "hooks/bin/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/epic-harness-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "epic-harness"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/epic-harness-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "epic-harness.exe"

[profile.release]
opt-level = "s"
lto = true
strip = true

# ---------------------------------------------------------------------------
# Build optimizations
# ---------------------------------------------------------------------------

[profile.dev]
opt-level = 0
debug = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 4
