[package]
name = "epic-harness"
version = "0.1.4"
edition = "2024"
description = "6 commands · auto skills · self-evolving Claude Code harness"
license = "Apache-2.0"
repository = "https://github.com/epicsagas/epic-harness"
homepage = "https://github.com/epicsagas/epic-harness"
readme = "README.md"
keywords = ["claude-code", "plugin", "agent", "harness", "ai"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["ref/", "tests/", ".harness/", "hooks/scripts/", "hooks/bin/"]

[[bin]]
name = "epic-harness"
path = "src/main.rs"

[lib]
name = "epic_harness"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/epic-harness-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "epic-harness"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/epic-harness-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "epic-harness.exe"

[profile.release]
opt-level = "s"
lto = true
strip = true

# ---------------------------------------------------------------------------
# Build optimizations
# ---------------------------------------------------------------------------

[profile.dev]
opt-level = 0
debug = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 4
